# stream-fx

./: .gitignore  README.md  example_config.yaml  pyproject.toml
stream_fx/: app.py
stream_fx/filters/: base_filter.py  blur.py  color_overlay.py  flip_horizontal.py  flip_vertical.py  gif_overlay.py  git_overlay.py  grayscale.py  snowfall_effect.py
stream_fx/filters/advanced/: face_blur.py  face_detection.py  face_emoji.py  face_pixelation.py
stream_fx/static/: control_panel.html
