[project]
name = "stream-fx"
version = "0.1.0"
description = ""
authors = [
    {name = "Howard Liu",email = "23202168+hsuanhauliu@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
]

[tool.poetry]
packages = [{include = "stream_fx", from = "."}]

[tool.poetry.scripts]
stream-fx = "stream_fx.app:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
